--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,12 @@
   document.getElementById("submitBtn").textContent = getButtonText(role);
   document.getElementById("username").textContent = username;
 
+  // ---- Set placeholder for name field based on role ----
+  if (role === "offloader") document.getElementById("name").placeholder = "Enter Offloader Name...";
+  if (role === "driver") document.getElementById("name").placeholder = "Enter Driver Name...";
+  // (Optional) Add for supervisor if you want:
+  // if (role === "supervisor") document.getElementById("name").placeholder = "Enter Supervisor Name...";
+
   const now = new Date();
   const pad = n => n < 10 ? "0" + n : n;
   document.getElementById("date").textContent = `${pad(now.getDate())}/${pad(now.getMonth()+1)}/${now.getFullYear()}`;
